--- a/src/components/DataVisualization.css
+++ b/src/components/DataVisualization.css
@@ -8,7 +8,11 @@
 
 .graph-container {
   width: 100%;
+  text-align: left;
+  color: var(--text);
+  border-radius: 4px;
   margin: 0.5rem;
+  background-color: var(--dark);
   padding: 1rem;
   box-shadow: 0px 1px 10px #00000030;
   max-width: 500px;
