--- a/src/components/RepoCard.css
+++ b/src/components/RepoCard.css
@@ -1,13 +1,27 @@
 .repo-card {
-  padding: 1rem;
+  padding: 2rem;
   box-shadow: 0px 1px 10px #00000030;
   text-align: left;
+  background-color: var(--dark);
+  border-radius: 4px;
+}
+
+.repo-stat-item {
+  margin-right: 1rem;
+}
+
+.margin-right {
+  margin-right: 0.3rem;
+}
+
+.repo-name {
+  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;;
 }
 
 .cut-text {
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 180px;
+  width: 200px;
   white-space: nowrap;
 }
 
