--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root {
+  --dark-background: #1e1e1e;
+  --dark: #363637;
+  --primary: #d23669;
+  --text: white;
+  --shadow: 0px 1px 10px #00000033;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--dark-background);
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;;
+}
+
+.primary {
+  color: #d23669;
 }
