--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -6,18 +6,32 @@ a {
   text-align: center;
   height: 100vh;
   max-width: 768px;
-  margin: 300px auto;
-  padding: 1rem;
+  margin: 0 auto;
+  padding: 300px 10rem;
+}
+
+.login-container h1 {
+  margin-bottom: 1rem;
 }
 
 input {
   padding: 0.5rem 1rem;
   width: 100%;
   font-size: 1rem;
-  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;;
+  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", "Lucida Console", Monaco, monospace;
+  background-color: var(--dark);
+  border: none;
+  border-radius: 4px;
+  color: var(--font);
 }
 
 button {
+  border-radius: 4px;
+  border: none;
+  background-color: var(--primary);
+  color: var(--text);
+  font-size: 1rem;
+  font-weight: 600;
   margin-top: 0.5rem;
   padding: 0.5rem 1rem;
   width: 100%;
@@ -25,8 +39,20 @@ button {
 
 input:focus {
   outline: none;
+  box-shadow:1px solid var(--shadow);
 }
 
 .login-icon  {
   font-size: 8rem;
+  margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .login-container {
+    text-align: center;
+    height: 100vh;
+    max-width: 768px;
+    margin: 0;
+    padding: 200px 1rem;
+  }  
 }
